--- a/GallereeMvp/Base.lproj/Main.storyboard
+++ b/GallereeMvp/Base.lproj/Main.storyboard
@@ -9,6 +9,13 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="Ppr-bV-lOP">
+                    <connections>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="qYI-4w-bt0"/>
+                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="vf8-zD-NXV"/>
+                    </connections>
+                </searchDisplayController>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GallereeMvp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
@@ -43,19 +50,11 @@
                             <constraint firstAttribute="trailingMargin" secondItem="jsp-Mc-s4U" secondAttribute="trailing" constant="-20" id="ZuM-1M-81A"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="jU4-BE-dBV"/>
                     <connections>
                         <outlet property="searchDisplayController" destination="Ppr-bV-lOP" id="raH-vJ-baf"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="Ppr-bV-lOP">
-                    <connections>
-                        <outlet property="delegate" destination="BYZ-38-t0r" id="qYI-4w-bt0"/>
-                        <outlet property="searchContentsController" destination="BYZ-38-t0r" id="u5d-nW-9vJ"/>
-                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="vf8-zD-NXV"/>
-                        <outlet property="searchResultsDelegate" destination="BYZ-38-t0r" id="565-Oz-SSX"/>
-                    </connections>
-                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="176" y="336"/>
         </scene>
@@ -120,35 +119,56 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Bly-8u-5J1">
-                                <rect key="frame" x="150" y="116" width="430" height="113"/>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Bly-8u-5J1">
+                                <rect key="frame" x="140" y="119" width="440" height="100"/>
                                 <date key="date" timeIntervalSinceReferenceDate="490140477.256015">
                                     <!--2016-07-13 22:07:57 +0000-->
                                 </date>
                             </datePicker>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VDE-AA-e8t">
-                                <rect key="frame" x="20" y="122" width="36" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Title" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4hB-Zh-o7E">
-                                <rect key="frame" x="20" y="78" width="560" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Title" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4hB-Zh-o7E">
+                                <rect key="frame" x="20" y="79" width="560" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KaK-Xy-VYZ">
-                                <rect key="frame" x="20" y="243" width="130" height="127"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="96"/>
-                                <state key="normal" title="[+]"/>
-                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addpicbutton" translatesAutoresizingMaskIntoConstraints="NO" id="kDh-xo-dea">
+                                <rect key="frame" x="20" y="119" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="OMb-dM-wou"/>
+                                    <constraint firstAttribute="height" constant="100" id="ugj-Kp-Wzx"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Add some context..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tGX-WT-JYK">
+                                <rect key="frame" x="20" y="229" width="560" height="361"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="tGX-WT-JYK" firstAttribute="top" secondItem="kDh-xo-dea" secondAttribute="bottom" constant="10" id="30P-Z0-APL"/>
+                            <constraint firstItem="Bly-8u-5J1" firstAttribute="leading" secondItem="kDh-xo-dea" secondAttribute="trailing" constant="20" id="C7u-W1-RPF"/>
+                            <constraint firstItem="kDh-xo-dea" firstAttribute="leading" secondItem="IS0-eB-xhO" secondAttribute="leadingMargin" id="Ebm-6N-2O9"/>
+                            <constraint firstItem="tGX-WT-JYK" firstAttribute="top" secondItem="Bly-8u-5J1" secondAttribute="bottom" constant="10" id="Kt6-ln-kSa"/>
+                            <constraint firstItem="4hB-Zh-o7E" firstAttribute="leading" secondItem="IS0-eB-xhO" secondAttribute="leadingMargin" id="McO-o0-GsQ"/>
+                            <constraint firstItem="tGX-WT-JYK" firstAttribute="leading" secondItem="IS0-eB-xhO" secondAttribute="leadingMargin" id="Ody-B3-Kgg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="qyd-d4-NT7" secondAttribute="trailing" constant="-20" id="SoB-dl-Fnh"/>
+                            <constraint firstItem="Ibr-vc-w8c" firstAttribute="top" secondItem="tGX-WT-JYK" secondAttribute="bottom" constant="10" id="XPe-7d-NWX"/>
+                            <constraint firstItem="Bly-8u-5J1" firstAttribute="trailing" secondItem="IS0-eB-xhO" secondAttribute="trailingMargin" id="aGV-ld-E64"/>
+                            <constraint firstItem="4hB-Zh-o7E" firstAttribute="trailing" secondItem="IS0-eB-xhO" secondAttribute="trailingMargin" id="cD4-a7-mYX"/>
+                            <constraint firstItem="kDh-xo-dea" firstAttribute="top" secondItem="4hB-Zh-o7E" secondAttribute="bottom" constant="10" id="dRz-l1-8rN"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Bly-8u-5J1" secondAttribute="bottom" constant="10" id="eY7-Ru-1jv"/>
+                            <constraint firstItem="tGX-WT-JYK" firstAttribute="trailing" secondItem="IS0-eB-xhO" secondAttribute="trailingMargin" id="f6v-R0-vWf"/>
                             <constraint firstItem="qyd-d4-NT7" firstAttribute="leading" secondItem="IS0-eB-xhO" secondAttribute="leadingMargin" constant="-20" id="jCS-bj-0cK"/>
+                            <constraint firstItem="Bly-8u-5J1" firstAttribute="top" secondItem="4hB-Zh-o7E" secondAttribute="bottom" constant="10" id="nF0-OF-vcr"/>
+                            <constraint firstItem="4hB-Zh-o7E" firstAttribute="top" secondItem="qyd-d4-NT7" secondAttribute="bottom" constant="15" id="ov5-Mh-4Yc"/>
                             <constraint firstItem="qyd-d4-NT7" firstAttribute="top" secondItem="Q0D-cu-agN" secondAttribute="bottom" id="vfa-Lj-jVd"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="eY7-Ru-1jv"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hzw-ET-cH6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -156,4 +176,7 @@
             <point key="canvasLocation" x="853" y="759"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="addpicbutton" width="1024" height="1024"/>
+    </resources>
 </document>
