--- a/GallereeMvp/Base.lproj/Main.storyboard
+++ b/GallereeMvp/Base.lproj/Main.storyboard
@@ -6,17 +6,10 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Timeline/Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="Ppr-bV-lOP">
-                    <connections>
-                        <outlet property="delegate" destination="BYZ-38-t0r" id="qYI-4w-bt0"/>
-                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="vf8-zD-NXV"/>
-                    </connections>
-                </searchDisplayController>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GallereeMvp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Timeline/Home" id="BYZ-38-t0r" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -55,13 +48,20 @@
                         <outlet property="searchDisplayController" destination="Ppr-bV-lOP" id="raH-vJ-baf"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="Ppr-bV-lOP">
+                    <connections>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="qYI-4w-bt0"/>
+                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="vf8-zD-NXV"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="176" y="336"/>
         </scene>
-        <!--View Controller-->
+        <!--Search-->
         <scene sceneID="TS2-et-8V8">
             <objects>
-                <viewController id="Ndb-qa-RTb" sceneMemberID="viewController">
+                <viewController title="Search" id="Ndb-qa-RTb" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dLA-Lf-BE8"/>
                         <viewControllerLayoutGuide type="bottom" id="ush-Rb-DK3"/>
@@ -98,10 +98,28 @@
             </objects>
             <point key="canvasLocation" x="853" y="60"/>
         </scene>
-        <!--View Controller-->
+        <!--Add Photo-->
+        <scene sceneID="NVB-Wa-ucX">
+            <objects>
+                <viewController title="Add Photo" id="Zdo-rc-cmt" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1AZ-GA-lKX"/>
+                        <viewControllerLayoutGuide type="bottom" id="rsQ-sC-Yp8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pRU-dF-jkF">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XbW-eD-OSn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1560" y="759"/>
+        </scene>
+        <!--New Moment-->
         <scene sceneID="GO5-6v-bsK">
             <objects>
-                <viewController id="bXf-P0-biW" sceneMemberID="viewController">
+                <viewController title="New Moment" id="bXf-P0-biW" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Q0D-cu-agN"/>
                         <viewControllerLayoutGuide type="bottom" id="Ibr-vc-w8c"/>
@@ -130,37 +148,41 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addpicbutton" translatesAutoresizingMaskIntoConstraints="NO" id="kDh-xo-dea">
-                                <rect key="frame" x="20" y="119" width="100" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="OMb-dM-wou"/>
-                                    <constraint firstAttribute="height" constant="100" id="ugj-Kp-Wzx"/>
-                                </constraints>
-                            </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Add some context..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tGX-WT-JYK">
                                 <rect key="frame" x="20" y="229" width="560" height="361"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kb6-3g-fTf">
+                                <rect key="frame" x="20" y="119" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="0pA-ho-YIq"/>
+                                    <constraint firstAttribute="width" constant="100" id="vf6-Cg-lna"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="addpicbutton"/>
+                                <connections>
+                                    <segue destination="Zdo-rc-cmt" kind="show" id="u2R-Fh-Goa"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="tGX-WT-JYK" firstAttribute="top" secondItem="kDh-xo-dea" secondAttribute="bottom" constant="10" id="30P-Z0-APL"/>
-                            <constraint firstItem="Bly-8u-5J1" firstAttribute="leading" secondItem="kDh-xo-dea" secondAttribute="trailing" constant="20" id="C7u-W1-RPF"/>
-                            <constraint firstItem="kDh-xo-dea" firstAttribute="leading" secondItem="IS0-eB-xhO" secondAttribute="leadingMargin" id="Ebm-6N-2O9"/>
+                            <constraint firstItem="kb6-3g-fTf" firstAttribute="leading" secondItem="IS0-eB-xhO" secondAttribute="leadingMargin" id="3nx-aB-fPA"/>
+                            <constraint firstItem="tGX-WT-JYK" firstAttribute="top" secondItem="kb6-3g-fTf" secondAttribute="bottom" constant="10" id="Das-LI-Dn3"/>
                             <constraint firstItem="tGX-WT-JYK" firstAttribute="top" secondItem="Bly-8u-5J1" secondAttribute="bottom" constant="10" id="Kt6-ln-kSa"/>
                             <constraint firstItem="4hB-Zh-o7E" firstAttribute="leading" secondItem="IS0-eB-xhO" secondAttribute="leadingMargin" id="McO-o0-GsQ"/>
                             <constraint firstItem="tGX-WT-JYK" firstAttribute="leading" secondItem="IS0-eB-xhO" secondAttribute="leadingMargin" id="Ody-B3-Kgg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="qyd-d4-NT7" secondAttribute="trailing" constant="-20" id="SoB-dl-Fnh"/>
+                            <constraint firstItem="Bly-8u-5J1" firstAttribute="leading" secondItem="kb6-3g-fTf" secondAttribute="trailing" constant="20" id="ThH-s2-wll"/>
                             <constraint firstItem="Ibr-vc-w8c" firstAttribute="top" secondItem="tGX-WT-JYK" secondAttribute="bottom" constant="10" id="XPe-7d-NWX"/>
                             <constraint firstItem="Bly-8u-5J1" firstAttribute="trailing" secondItem="IS0-eB-xhO" secondAttribute="trailingMargin" id="aGV-ld-E64"/>
                             <constraint firstItem="4hB-Zh-o7E" firstAttribute="trailing" secondItem="IS0-eB-xhO" secondAttribute="trailingMargin" id="cD4-a7-mYX"/>
-                            <constraint firstItem="kDh-xo-dea" firstAttribute="top" secondItem="4hB-Zh-o7E" secondAttribute="bottom" constant="10" id="dRz-l1-8rN"/>
                             <constraint firstAttribute="bottomMargin" secondItem="Bly-8u-5J1" secondAttribute="bottom" constant="10" id="eY7-Ru-1jv"/>
                             <constraint firstItem="tGX-WT-JYK" firstAttribute="trailing" secondItem="IS0-eB-xhO" secondAttribute="trailingMargin" id="f6v-R0-vWf"/>
                             <constraint firstItem="qyd-d4-NT7" firstAttribute="leading" secondItem="IS0-eB-xhO" secondAttribute="leadingMargin" constant="-20" id="jCS-bj-0cK"/>
                             <constraint firstItem="Bly-8u-5J1" firstAttribute="top" secondItem="4hB-Zh-o7E" secondAttribute="bottom" constant="10" id="nF0-OF-vcr"/>
+                            <constraint firstItem="kb6-3g-fTf" firstAttribute="top" secondItem="4hB-Zh-o7E" secondAttribute="bottom" constant="10" id="o3F-Wj-cTT"/>
                             <constraint firstItem="4hB-Zh-o7E" firstAttribute="top" secondItem="qyd-d4-NT7" secondAttribute="bottom" constant="15" id="ov5-Mh-4Yc"/>
                             <constraint firstItem="qyd-d4-NT7" firstAttribute="top" secondItem="Q0D-cu-agN" secondAttribute="bottom" id="vfa-Lj-jVd"/>
                         </constraints>
